name:                koneko-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/akazukin5151/koneko#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable koneko-hs
  hs-source-dirs:      src/haskell
  main-is:             Main.hs
  other-modules:       Types,

                       Serialization.In,
                       Serialization.Out,
                       Core,
                       Common,
                       Graphics,
                       UI,
                       Events,
                       Requests,
                       Sockets,
                       History,

                       Download.Core,
                       Download.Common,
                       Download.Parsers,
                       Download.Downloaders,

                       Config.Types,
                       Config.Core,

                       UI.Common,
                       UI.ArtistListUI,
                       UI.GalleryUI,
                       UI.PromptUI,
                       UI.SingleImageUI,
                       UI.WelcomeUI,

                       Events.Core,
                       Events.Common,
                       Events.FindImages,
                       Events.ShowImages,
                       Events.WelcomeEvent,
                       Events.PromptEvent

  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Weverything
                       -Wno-missing-exported-signatures
                       -Wno-missing-import-lists
                       -Wno-missed-specialisations
                       -Wno-all-missed-specialisations
                       -Wno-unsafe
                       -Wno-safe
                       -Wno-missing-safe-haskell-mode
                       -Wno-missing-local-signatures
                       -Wno-monomorphism-restriction
                       -Wno-implicit-prelude
                       -Wno-prepositive-qualified-module
                       -Wno-missing-deriving-strategies
  build-depends:       base >= 4.7 && < 5,
                       brick >= 0.62,
                       vty >= 5.33,
                       microlens-th >= 0.4.3.10,
                       microlens >= 0.4.12.0,
                       process >= 1.6.13.2,
                       ueberzug >= 0.1,
                       directory >= 1.3.6.0,
                       filepath >= 1.4.2.1,
                       text-zipper >= 0.11,
                       aeson >= 1.5.6,
                       utf8-string >= 1.0.2,
                       network >= 3.1.1.1,
                       bytestring >= 0.10.12.0,
                       text >= 1.2.4.1,
                       ghc >= 8.10.7
