name:                koneko-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/akazukin5151/koneko#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable koneko-hs
  hs-source-dirs:      src/haskell
  main-is:             Main.hs
  other-modules:       Types,

                       Serialization.In,
                       Serialization.Out,
                       Core,
                       Common,
                       UI,
                       Events,
                       Requests,
                       Sockets,
                       History,

                       Download.Core,
                       Download.Common,
                       Download.Parsers,
                       Download.Downloaders,

                       Config.Types,
                       Config.Core,

                       UI.Common,
                       UI.ArtistListUI,
                       UI.GalleryUI,
                       UI.PromptUI,
                       UI.SingleImageUI,
                       UI.HomeUI,

                       Events.Core,
                       Events.Common,
                       Events.FindImages,
                       Events.ShowImages,
                       Events.HomeEvent,
                       Events.PromptEvent,
                       Events.ItemActions

  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Weverything
                       -Wno-missing-exported-signatures
                       -Wno-missing-import-lists
                       -Wno-missed-specialisations
                       -Wno-all-missed-specialisations
                       -Wno-unsafe
                       -Wno-safe
                       -Wno-missing-safe-haskell-mode
                       -Wno-missing-local-signatures
                       -Wno-monomorphism-restriction
                       -Wno-implicit-prelude
                       -Wno-prepositive-qualified-module
                       -Wno-missing-deriving-strategies
  build-depends:       base >= 4.7 && < 5,
                       brick >= 0.62 && < 0.70,
                       vty >= 5.33 && < 5.40,
                       microlens-th >= 0.4.3.10 && < 0.5,
                       microlens >= 0.4.12.0 && < 0.5,
                       process >= 1.6.13.2 && < 1.7,
                       ueberzug >= 0.2.0.0 && < 1.0.0.0,
                       directory >= 1.3.6.0 && < 1.4,
                       filepath >= 1.4.2.1 && < 1.5,
                       text-zipper >= 0.11 && < 0.20,
                       aeson >= 1.5.6 && < 1.6,
                       utf8-string >= 1.0.2 && < 1.1,
                       network >= 3.1.1.1 && < 3.2,
                       bytestring >= 0.10.12.0 && < 0.11,
                       text >= 1.2.4.1 && < 1.3,
                       ghc >= 8.10.7 && < 8.11,
                       word-wrap >= 0.4 && < 1.0,
                       containers >= 0.6 && < 0.7
